fixed gapping

--- a/static/styles.css
+++ b/static/styles.css
@@ -124,7 +124,6 @@ body {
   }
 
   .grid-container {
-    gap: 20px;
     column-gap: 20px;
     row-gap: 20px;
   }
